{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 51,
  "lineage": "4f2e8b7c-2c1a-4138-c64d-5d2129fe239f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/loadBalancers/lb-name/frontendIPConfigurations/PublicIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/loadBalancers/lb-name/loadBalancingRules/http-rule"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/publicIPAddresses/lb-public-ip"
              }
            ],
            "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/loadBalancers/lb-name",
            "location": "centralindia",
            "name": "lb-name",
            "resource_group_name": "Project-3Tier",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.three_tier_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lb-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Compute/virtualMachineScaleSets/Prashanth-vmss/virtualMachines/2/networkInterfaces/Prahanth-nic/ipConfigurations/internal",
              "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Compute/virtualMachineScaleSets/Prashanth-vmss/virtualMachines/3/networkInterfaces/Prahanth-nic/ipConfigurations/internal"
            ],
            "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/loadBalancers/lb-name/backendAddressPools/backend-pool",
            "load_balancing_rules": [
              "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/loadBalancers/lb-name/loadBalancingRules/http-rule"
            ],
            "loadbalancer_id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/loadBalancers/lb-name",
            "name": "backend-pool"
          },
          "dependencies": [
            "azurerm_lb.loadbalancer",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.three_tier_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "Health-Prob-lob",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/loadBalancers/lb-name/probes/http-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/loadBalancers/lb-name/loadBalancingRules/http-rule"
            ],
            "loadbalancer_id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/loadBalancers/lb-name",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.loadbalancer",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.three_tier_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/loadBalancers/lb-name/backendAddressPools/backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/loadBalancers/lb-name/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/loadBalancers/lb-name/loadBalancingRules/http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/loadBalancers/lb-name",
            "name": "http-rule",
            "probe_id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/loadBalancers/lb-name/probes/http-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.loadbalancer",
            "azurerm_lb_backend_address_pool.lb-backend",
            "azurerm_lb_probe.Health-Prob-lob",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.three_tier_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "lb_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/networkSecurityGroups/lb-nsg",
            "location": "centralindia",
            "name": "lb-nsg",
            "resource_group_name": "Project-3Tier",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.three_tier_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/networkSecurityGroups/private-nsg",
            "location": "centralindia",
            "name": "private-nsg",
            "resource_group_name": "Project-3Tier",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.three_tier_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/publicIPAddresses/lb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.213.124.143",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "lb-public-ip",
            "resource_group_name": "Project-3Tier",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.three_tier_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/virtualNetworks/Virtual-network-3Tier/subnets/private-subnet",
            "name": "private-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Project-3Tier",
            "virtual_network_name": "Virtual-network-3Tier"
          },
          "dependencies": [
            "azurerm_resource_group.three_tier_rg",
            "azurerm_virtual_network.Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/virtualNetworks/Virtual-network-3Tier/subnets/public-subnet",
            "name": "public-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Project-3Tier",
            "virtual_network_name": "Virtual-network-3Tier"
          },
          "dependencies": [
            "azurerm_resource_group.three_tier_rg",
            "azurerm_virtual_network.Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/virtualNetworks/Virtual-network-3Tier/subnets/private-subnet",
            "network_security_group_id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/networkSecurityGroups/private-nsg",
            "subnet_id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/virtualNetworks/Virtual-network-3Tier/subnets/private-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.three_tier_rg",
            "azurerm_subnet.private",
            "azurerm_virtual_network.Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/virtualNetworks/Virtual-network-3Tier/subnets/public-subnet",
            "network_security_group_id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/networkSecurityGroups/lb-nsg",
            "subnet_id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/virtualNetworks/Virtual-network-3Tier/subnets/public-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.lb_nsg",
            "azurerm_resource_group.three_tier_rg",
            "azurerm_subnet.public",
            "azurerm_virtual_network.Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "14eac212-4b7d-48f8-9db0-3527833b1c87",
            "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/virtualNetworks/Virtual-network-3Tier",
            "location": "centralindia",
            "name": "Virtual-network-3Tier",
            "resource_group_name": "Project-3Tier",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/virtualNetworks/Virtual-network-3Tier/subnets/public-subnet",
                "name": "public-subnet",
                "security_group": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/networkSecurityGroups/lb-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/bf7e75db-e819-49ca-b6d2-69c32a2353fe/resourceGroups/Project-3Tier/providers/Microsoft.Network/virtualNetworks/Virtual-network-3Tier/subnets/private-subnet",
                "name": "private-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.three_tier_rg"
          ]
        }
      ]
    }
  ]
}